src/objects/SampleStaging__c.object
<CustomObject>
    <fields>
        <fullName>empname__c</fullName>
        <label>empname</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joindate__c</fullName>
        <label>joindate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>salary__c</fullName>
        <label>salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>SampleStaging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>SampleStaging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SampleStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>